--- a/VehicleInfo.vcxproj.filters
+++ b/VehicleInfo.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClInclude Include="CStatistics.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="pch.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="WeekDay.h">
+      <Filter>Datagram</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="VehicleInfo.cpp">
@@ -79,6 +85,12 @@
     </ClCompile>
     <ClCompile Include="CStatistics.cpp">
       <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="pch.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="WeekDay.cpp">
+      <Filter>Datagram</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
