--- a/VehicleInfo.vcxproj.filters
+++ b/VehicleInfo.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="WeekDay.h">
       <Filter>Datagram</Filter>
     </ClInclude>
+    <ClInclude Include="CAlertRank.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="VehicleInfo.cpp">
@@ -91,6 +94,9 @@
     </ClCompile>
     <ClCompile Include="WeekDay.cpp">
       <Filter>Datagram</Filter>
+    </ClCompile>
+    <ClCompile Include="CAlertRank.cpp">
+      <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
