--- a/VehicleInfo.vcxproj
+++ b/VehicleInfo.vcxproj
@@ -207,6 +207,7 @@
   <ItemGroup>
     <ClInclude Include="CAlertData.h" />
     <ClInclude Include="CAlertRank.h" />
+    <ClInclude Include="CHistoryRecord.h" />
     <ClInclude Include="CQuery.h" />
     <ClInclude Include="CRealTimeRecv.h" />
     <ClInclude Include="CStatistics.h" />
@@ -224,6 +225,7 @@
   <ItemGroup>
     <ClCompile Include="CAlertData.cpp" />
     <ClCompile Include="CAlertRank.cpp" />
+    <ClCompile Include="CHistoryRecord.cpp" />
     <ClCompile Include="CQuery.cpp" />
     <ClCompile Include="CRealTimeRecv.cpp" />
     <ClCompile Include="CStatistics.cpp" />
