--- a/VehicleInfo.vcxproj
+++ b/VehicleInfo.vcxproj
@@ -205,6 +205,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CAlertCategory.h" />
     <ClInclude Include="CAlertData.h" />
     <ClInclude Include="CAlertRank.h" />
     <ClInclude Include="CQuery.h" />
@@ -223,6 +224,7 @@
     <ClInclude Include="WeekDay.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CAlertCategory.cpp" />
     <ClCompile Include="CAlertData.cpp" />
     <ClCompile Include="CAlertRank.cpp" />
     <ClCompile Include="CQuery.cpp" />
