--- a/VehicleInfo.vcxproj.filters
+++ b/VehicleInfo.vcxproj.filters
@@ -63,11 +63,17 @@
     <ClInclude Include="CAlertRank.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="Datagram\CHistoryRecord.h">
-      <Filter>Datagram</Filter>
-    </ClInclude>
     <ClInclude Include="CAlertCategory.h">
       <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Datagram\UserMessage.h">
+      <Filter>Datagram</Filter>
+    </ClInclude>
+    <ClInclude Include="Datagram\CAlertStats.h">
+      <Filter>Datagram</Filter>
+    </ClInclude>
+    <ClInclude Include="Datagram\CHistoryRecord.h">
+      <Filter>Datagram</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -104,11 +110,14 @@
     <ClCompile Include="CAlertRank.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="Datagram\CHistoryRecord.cpp">
-      <Filter>Datagram</Filter>
-    </ClCompile>
     <ClCompile Include="CAlertCategory.cpp">
       <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Datagram\CAlertStats.cpp">
+      <Filter>Datagram</Filter>
+    </ClCompile>
+    <ClCompile Include="Datagram\CHistoryRecord.cpp">
+      <Filter>Datagram</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
