--- a/VehicleInfo.vcxproj.filters
+++ b/VehicleInfo.vcxproj.filters
@@ -66,6 +66,12 @@
     <ClInclude Include="Datagram\CAlertStats.h">
       <Filter>Datagram</Filter>
     </ClInclude>
+    <ClInclude Include="Datagram\CHistoryRecord.h">
+      <Filter>Datagram</Filter>
+    </ClInclude>
+    <ClInclude Include="WeekDay.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="VehicleInfo.cpp">
@@ -100,6 +106,12 @@
     </ClCompile>
     <ClCompile Include="Datagram\CAlertStats.cpp">
       <Filter>Datagram</Filter>
+    </ClCompile>
+    <ClCompile Include="Datagram\CHistoryRecord.cpp">
+      <Filter>Datagram</Filter>
+    </ClCompile>
+    <ClCompile Include="WeekDay.cpp">
+      <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
