--- a/VehicleInfo.vcxproj.filters
+++ b/VehicleInfo.vcxproj.filters
@@ -69,10 +69,10 @@
     <ClInclude Include="Datagram\CHistoryRecord.h">
       <Filter>Datagram</Filter>
     </ClInclude>
-    <ClInclude Include="WeekDay.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="Datagram\CFileParse.h">
+      <Filter>Datagram</Filter>
+    </ClInclude>
+    <ClInclude Include="Datagram\WeekDay.h">
       <Filter>Datagram</Filter>
     </ClInclude>
   </ItemGroup>
@@ -113,10 +113,10 @@
     <ClCompile Include="Datagram\CHistoryRecord.cpp">
       <Filter>Datagram</Filter>
     </ClCompile>
-    <ClCompile Include="WeekDay.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="Datagram\CFileParse.cpp">
+      <Filter>Datagram</Filter>
+    </ClCompile>
+    <ClCompile Include="Datagram\WeekDay.cpp">
       <Filter>Datagram</Filter>
     </ClCompile>
   </ItemGroup>
