--- a/VehicleInfo.vcxproj
+++ b/VehicleInfo.vcxproj
@@ -208,6 +208,7 @@
     <ClInclude Include="Datagram\CHistoryRecord.h" />
     <ClInclude Include="Datagram\CInfoRecord.h" />
     <ClInclude Include="Datagram\CInfoSocket.h" />
+    <ClInclude Include="Datagram\CShareMem.h" />
     <ClInclude Include="Datagram\InfoType.h" />
     <ClInclude Include="Datagram\UserMessage.h" />
     <ClInclude Include="Datagram\WeekDay.h" />
@@ -229,6 +230,7 @@
     <ClCompile Include="Datagram\CHistoryRecord.cpp" />
     <ClCompile Include="Datagram\CInfoRecord.cpp" />
     <ClCompile Include="Datagram\CInfoSocket.cpp" />
+    <ClCompile Include="Datagram\CShareMem.cpp" />
     <ClCompile Include="Datagram\WeekDay.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
